--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,32 @@ body {
   width: 55px;
 }
 
+.codepen{
+    margin-left: 17px;
+    margin-top: 6px;
+}
+
+.codepen img{
+    width: 4%;
+}
+
+#codepen-text{
+    margin-left: 15px;
+}
+
+.gfg{
+    margin-left: 24px;
+    margin-top: 27px;
+}
+
+.gfg img{
+    width: 2.8%;
+}
+
+#gfg-text{
+    margin: 0;
+}
+
 .github {
   margin-top: 2px;
   margin-left: 16px;
